[project]
name = "onecontext"
version = "0.1.0"
description = "1Context: a cross-agent memory layer for agentic work."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Haptica, Inc.", email = "contact@haptica.ai" },
]
dependencies = [
    "lancedb>=0.30.2",
]

[project.scripts]
1context = "onectx.cli:main"
onectx = "onectx.cli:main"
1context-memory-core = "onectx.memory_core_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onectx"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/tests",
    "/1context.toml",
    "/accounts.toml",
    "/host.toml",
    "/ports.toml",
    "/ports",
    "/memory",
    "/storage/.gitignore",
    "/storage/README.md",
    "/storage/lakestore/README.md",
    "/wiki",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "/.venv",
    "/.pytest_cache",
    "/.ruff_cache",
    "/apps/**/node_modules",
    "/apps/**/dist",
]
